# render-engine

./: .gitignore  Allocator.h  CMakeLists.txt  Commands.cpp  Commands.h  Device.cpp  Device.h  JpegReader.h  Material.h  Matrix.h  Model.h  ModelInstance.h  ModelManager.h  PBRShaders.h  README.md  RenderQueue.cpp  RenderQueue.h  Shaders.h  Shapes.h  Text.cpp  Text.h  Texture.h  TextureManager.h  TgaReader.h  Vector.h  Wavefront.cpp  Wavefront.h  calculate_irradiance_map.cpp  dual_depth_peeling.cpp  main.cpp  physically_based_rendering.cpp  physically_based_shading.cpp  subsurface_scattering.cpp
gl3w/: gl3w_gen.py
gl3w/src/: gl3w.c
images/: stained_glass.tga
